fix: render properly on mobiles

--- a/themes/lunef/assets/scss/main.scss
+++ b/themes/lunef/assets/scss/main.scss
@@ -57,7 +57,6 @@ body {
 .content-table {
     border: 1px solid;
     margin: auto;
-    width: $site-width;
 }
 
 tr td {
@@ -67,7 +66,6 @@ tr td {
 }
 
 .mermaid svg {
-  max-width: $site-width;
   height: auto;
 }
 
@@ -86,3 +84,6 @@ a.active {
     color: $normal-blue;
 }
 
+code {
+    text-wrap: wrap;
+}
